# world_simulation

./: .gitignore  CMakeLists.txt
src/: agent.cpp  agent.h  decision.cpp  decision.h  information.cpp  information.h  main.cpp  world.cpp  world.h
src/resources/: resource.cpp  resource.h  water.cpp  water.h
src/utils/: delaunay.cpp  delaunay.h  delaunay_triangulation.cpp  delaunay_triangulation.h  polygon_map.cpp  polygon_map.h  polyhedron.cpp  polyhedron.h
